--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <br>
                     pre final year student from NIST University.
                 </h1>
-                <a href="ASHUTOSH PATROCV.pdf" download class="download-btn">Download My CV</a>
+                <a href="resume.pdf" download class="download-btn">Download My CV</a>
                 <a href="https://www.linkedin.com/in/ashutosh-patro-2054b7239" target="_blank" class="download-btn">LinkedIn Profile</a>
 
             </div>
